# apka-test

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml  schema.py  settings.py
migrations/: 0000001.init.rollback.sql  0000001.init.sql  0000002.init.sql
templates/: books_query.tmpl
